...
                    }
                }
            )
        },
        floatingActionButton = {
            FloatingActionButton(onClick = { viewModel.openReservationPopup() }) {
                Icon(Icons.Filled.DateRange, contentDescription = "Maak een reservering")
            }
        }
    ) {
        Column(modifier = Modifier.padding(it)) {
            if (listedCar == null && loading) {
                return@Scaffold Box(modifier = Modifier.fillMaxSize(), contentAlignment = Alignment.Center) {
...
