...
            TopAppBar(
                colors = TopAppBarDefaults.RentACar(),
                title = {
                    Text(
                        text = Screen.MyCars.title,
                        modifier = Modifier
                            .testTag("home-topbar")
                            .padding(10.dp)
                    )
                },
                navigationIcon = {
                    IconButton(onClick = { coroutineScope.launch { appData.drawerState.open() } }) {
                        Icon(
...
